# Overheat

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  vcpkg.json
.github/workflows/: c-cpp.yml
cmake/: ColorfullOutput.cmake  Conan.cmake  PreventSourceBuilds.cmake  SetupBuildTypes.cmake  Vcpkg.cmake
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_000000_000013.html  dir_000002_000001.html  dir_000002_000011.html  dir_000003_000001.html  dir_000003_000007.html  dir_000005_000001.html  dir_000005_000011.html  dir_000006_000002.html  dir_000007_000002.html  dir_000009_000001.html  dir_000009_000013.html  (+361 more)
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/: common.h  config.h  log.h  shapes.h
src/common/src/: log.cpp
src/core/: CMakeLists.txt
src/core/include/: core.h  databases.h  heatmap.h  heatmap_normalizer.h  ireader.h  metadata_storage.h  shapes.h
src/core/readers/: IReader.h
src/core/src/: core.cpp  databases.cpp  databases.h  heatmap.cpp  heatmap.h  heatmap_normalizer.cpp  shapes.cpp  shapes.h
src/fem_solver/: CMakeLists.txt
src/fem_solver/include/: i_fem_solver.hpp  solver_db.hpp
src/fem_solver/src/: fem_solver.cpp  fem_solver.hpp  geometry_cutter.cpp  geometry_cutter.cpp~  geometry_cutter.hpp  heatmap_converter.cpp  heatmap_converter.hpp  main_matrix_solver.cpp  main_matrix_solver.hpp  matrix_agregator.cpp  matrix_agregator.hpp  solver_db.cpp  solver_db.hpp  solver_shapes.cpp  solver_shapes.hpp  variance_solver.cpp  variance_solver.hpp
src/fem_solver/tests/: main_matix_tests.cpp
src/mesh_processor/: CMakeLists.txt
src/mesh_processor/include/: box_mesh.cpp  box_mesh.h  generate_mesh.h  generate_mesh.h~
src/mesh_processor/src/: box_boundary_generator.cpp  box_boundary_generator.h  generate_mesh.cpp  utils.cpp  utils.h  utils.h~
src/readers/: CMakeLists.txt
src/readers/doc/: en9.txt  virtex.txt
src/readers/include/: idata_provider.h
src/readers/src/: T2D.h  TRM.cpp  TRM.h  common.h  virtex_data_classes.cpp  virtex_data_classes.h  virtex_data_provider.cpp  virtex_data_provider.h  virtex_reader.cpp  virtex_reader.h
src/readers/src/solver2d/: solver2d_T2D.h  solver2d_TRM.cpp  solver2d_TRM.h  solver2d_data_provider.cpp  solver2d_data_provider.h  solver2d_reader.cpp  solver2d_reader.h  type2_TRM.cpp
src/readers/src/solver3d/: solver3d_T2D.h  solver3d_TRM.cpp  solver3d_TRM.h  solver3d_data_provider.cpp  solver3d_data_provider.h  solver3d_reader.cpp  solver3d_reader.h
src/readers/src/type1/: type1_T2D.h  type1_TRM.cpp  type1_TRM.h  type1_data_provider.cpp  type1_data_provider.h  type1_eader.cpp  type1_eader.h
src/readers/src/type2/: type2_TRM.cpp  type2_TRM.h  type2_data_provider.cpp  type2_data_provider.h  type2_reader.cpp  type2_reader.h
src/readers/tests/: column.TRM  cube.TRM  en9.T2D  en9.trm  one_shape_virtex.TRM  small_virtex.TRM  small_virtex_same_x_y_size.TRM  solver2d_test.cpp  solver3d_test.cpp  temp.txt  test.cpp  type2_test.cpp  virtex.TRM  virtex1.TRM  virtex7_20_adapted_test.TRM  virtex_med.TRM  virtex_med_conv.TRM  virtex_med_conv_test.TRM  virtex_med_kelvin.TRM  virtex_medsi_si.TRM
src/renderer/: CMakeLists.txt
src/renderer/include/: IOverheatRenderer.h  OverheatGLRenderer.h  gl_renderer.h  gl_scene_viewport.h  i_renderer.h  i_scene_viewport.h  scene.h  vector.h
src/renderer/res/shaders/: debug.fs  debug.vs  debug_heatmap.fs  debug_heatmap.vs  font.fs  font.vs  heatmap.fs  heatmap.vs  temp_bar.fs  temp_bar.vs  tetrahedrons.fs  tetrahedrons.vs  wireframe.fs  wireframe.vs
src/renderer/src/: OverheatGLRenderer.cpp  camera_controller.cpp  camera_controller.h  constants.h  gl_renderer.cpp  gl_scene_viewport.cpp  gl_scene_viewport.h  i_scene_viewport.cpp  scene.cpp
src/renderer/src/application/: box_shape.cpp  box_shape.h  heatmap_material.cpp  heatmap_material.h  scene_shape.cpp  scene_shape.h  temperature_bar.cpp  temperature_bar.h  temperature_bar_material.cpp  temperature_bar_material.h  tetrahedron_material.cpp  tetrahedron_material.h  tetrahedron_shape.cpp  tetrahedron_shape.h  wireframe_material.cpp  wireframe_material.h
src/renderer/src/misc/: formatters.h
src/renderer/src/opengl/: indexbuffer.cpp  indexbuffer.h  renderer_api.cpp  shaderprogram.cpp  shaderprogram.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.cpp  vertexbufferlayout.h
src/renderer/src/platform/opengl/: constants.h  gl_factory.cpp  gl_factory.h  indexbuffer.cpp  indexbuffer.h  renderer_api.cpp  renderer_api.h  texture2d.cpp  texture2d.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
src/renderer/src/renderer/: drawable.cpp  drawable.h  i_camera.h  i_renderer_factory.h  indexbuffer.cpp  indexbuffer.h  orthographic_camera.cpp  orthographic_camera.h  renderer_api.cpp  renderer_api.h  renderer_context.h  scene_object.h  shaderprogram.cpp  shaderprogram.h  texture2d.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.cpp  vertexbufferlayout.h
src/renderer/src/renderer/debug/: axes.cpp  axes.h  debug_heatmap_material.cpp  debug_heatmap_material.h  debug_material.cpp  debug_material.h  line.h
src/renderer/src/text/: font.cpp  font.h  font_material.cpp  font_material.h  text2d.cpp  text2d.h
src/renderer/tests/: test_main.cpp  test_normalizer.cpp
src/ui/: CMakeLists.txt
src/ui/include/: OverheatMainWidnow.h  OverheatRenderWindow.h  OverheatSideWindow.h  OverheatWindow.h
src/ui/src/: OverheatMainWidnow.cpp  OverheatRenderWindow.cpp  OverheatSideWindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata_widget.cpp  metadata_widget.h  metadata_widget.ui  renderer_widget.cpp  renderer_widget.h  renderer_widget.ui  shape_list_widget.cpp  shape_list_widget.h  shape_list_widget.ui  solver_options.cpp  solver_options.h  visualisation_options.cpp  visualisation_options.h  visualisation_options.ui  visualization_options.cpp  visualization_options.h  visualization_options.ui
(+1154 files in other folders)
